# DeltaOne

./: .gitignore  .pre-commit-config.yaml  CHECKLIST.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PROGRESS.md  PROJECT_COMPLETE.md  PROJECT_OVERVIEW.md  README.md  TEST_RESULTS_THEORY_V2.md  THEORY_V2_FINAL_REPORT.md  THEORY_V2_IMPLEMENTATION.md  create_stats_from_bitsets.py  monitor_test.py  pyproject.toml
.github/workflows/: ci.yml
deltaone/: __init__.py
deltaone/cli/: __init__.py  cli_certificates.py  d1_apply.py  d1_convert.py  d1_select.py
deltaone/compensate/: __init__.py  obs.py
deltaone/core/: __init__.py  bitset.py  block_iter.py  hf_index.py
deltaone/delta/: __init__.py  delta_memmap.py  lora_expand.py
deltaone/hessian/: __init__.py  cg_solver.py  gram.py
deltaone/runners/: __init__.py  pass_apply.py  pass_select.py
deltaone/select/: __init__.py  budgeting.py  budgeting_extra.py  scoring.py  streaming_select.py  threshold_scan.py
deltaone/theory/: __init__.py  certificates.py  submodularity.py
docs/: README.md  SINGLE_MODEL_GUIDE.md  THEORY.md  THEORY_V2.md  USAGE.md
examples/: quick_start.sh
experiments/: DATASET_STATUS_AND_NEEDS.md  EXPERIMENT_PLAN.md  EXPERIMENT_STATUS_20251015.md  PROGRESS_REPORT.md  README.md  REMAINING_EXPERIMENTS_PLAN.md  SAFEDELTA_ALIGNMENT_CHECKLIST.md
experiments/configs/: example_3b_rho12.json
experiments/scripts/: analyze_asr.py  auto_monitor_and_trigger.sh  batch_evaluate_purebad100.sh  batch_safety_eval.sh  benchmark_performance.py  convert_purebad_to_csv.py  (+8 more)
scripts/: run_deltaone_pipeline.sh
test_outputs/: pass2_apply_log.txt  safety_asr_results.txt  utility_rouge_results.txt
tests/: test_bitset.py  test_block_iter.py  test_integration.py  test_streaming_select.py
